k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demand-planning-web
  namespace: demand-planning
  labels:
    app: demand-planning-web
    environment: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demand-planning-web
  template:
    metadata:
      labels:
        app: demand-planning-web
    spec:
      containers:
        - name: frontend
          image: ashleyfurniture.azurecr.io/afi/demand-planning/demand-planning-web:latest
          ports:
            - containerPort: 3000

          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
